@@ -1,3 +1,7 @@
+2004-11-18  Sven de Marothy  <sven@physto.se>
+
+	* java/awt/Polygon.java (contains): Reimplemented.
+
 2004-11-17  Michael Koch  <konqueror@gmx.de>
 
 	* java/awt/print/PrinterJob.java: Reformatted.
